--- a/.github/workflows/deploy-to-production.yml
+++ b/.github/workflows/deploy-to-production.yml
@@ -2,10 +2,11 @@ name: Deploy to Production
 
 on:
   release:
-    types: [published]
+    types: [published, released]
 
 jobs:
   deploy:
+    if: github.event.release.prerelease == false
     runs-on: ubuntu-latest
     environment: 
       name: production
