fix: remove published trigger

--- a/.github/workflows/deploy-to-production.yml
+++ b/.github/workflows/deploy-to-production.yml
@@ -2,11 +2,10 @@ name: Deploy to Production
 
 on:
   release:
-    types: [published, released]
+    types: [released]
 
 jobs:
   deploy:
-    if: github.event.release.prerelease == false
     runs-on: ubuntu-latest
     environment: 
       name: production
