--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -12,7 +12,10 @@ on:
           - major
           - minor
           - patch
-      
+
+permissions:
+  contents: write
+  pull-requests: write
 
 jobs:
   create_bump_pr:
