--- a/.github/workflows/publish-pre-release.yml
+++ b/.github/workflows/publish-pre-release.yml
@@ -1,19 +1,19 @@
 name: Publish Pre-Release
 
 on:
-  push:
+  pull_request:
+    types: [closed]
     branches:
-      - main
-    paths:
       - 'release/**'
+
 
 permissions:
   contents: write
   pull-requests: write
-  
+
 jobs:
   publish_pre_release:
-    if: startsWith(github.ref, 'refs/heads/main') && startsWith(github.event.ref, 'refs/heads/release/') 
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
     steps:
