--- a/.github/workflows/publish-pre-release.yml
+++ b/.github/workflows/publish-pre-release.yml
@@ -1,19 +1,19 @@
 name: Publish Pre-Release
 
 on:
-  pull_request:
-    types: [closed]
+  push:
     branches:
-      - 'release/**'
-
+      - main
+    tags:
+      - v*
 
 permissions:
   contents: write
   pull-requests: write
-
+  
 jobs:
   publish_pre_release:
-    if: github.event.pull_request.merged == true
+    if: startsWith(github.ref, 'refs/heads/main') && startsWith(github.event.ref, 'refs/heads/release/') 
     runs-on: ubuntu-latest
 
     steps:
