--- a/.github/workflows/publish-pre-release.yml
+++ b/.github/workflows/publish-pre-release.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Draft a new release
         uses: release-drafter/release-drafter@v5
         with:
-          config-name: .github/release-drafter.yml
+          config-name: release-drafter.yml
           prerelease: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
