fix: release-drafter workflow

--- a/.github/workflows/publish-pre-release.yml
+++ b/.github/workflows/publish-pre-release.yml
@@ -1,11 +1,9 @@
 name: Publish Pre-Release
 
 on:
-  push:
-    branches:
-      - main
-    tags:
-      - v*
+  pull_request:
+    types: [closed]
+    branches: [main]
 
 permissions:
   contents: write
@@ -13,6 +11,9 @@ permissions:
   
 jobs:
   publish_pre_release:
+    if: |
+      github.event.pull_request.merged == true && 
+      contains(github.event.pull_request.head.ref, 'release/')
     runs-on: ubuntu-latest
 
     steps:
@@ -23,5 +24,6 @@ jobs:
         with:
           config-name: release-drafter.yml
           prerelease: true
+          publish: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
